WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251097
formDisabledCallback() sometimes fires even when disabled-ness hasn't changed
https://bugs.webkit.org/show_bug.cgi?id=251097
Summary
formDisabledCallback() sometimes fires even when disabled-ness hasn't changed
Alexey Shvayka
Reported
2023-01-24 10:44:23 PST
When inside a <fieldset>.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2023-01-24 11:00:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9056
EWS
Comment 2
2023-01-25 10:41:54 PST
Committed
259372@main
(b391993e41c5): <
https://commits.webkit.org/259372@main
> Reviewed commits have been landed. Closing PR #9056 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-01-25 10:42:21 PST
<
rdar://problem/104654383
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug