Source/WebCore/html/HTMLFieldSetElement.h
@@ -2,7 +2,7 @@
  * Copyright (C) 1999 Lars Knoll (knoll@kde.org)
  *           (C) 1999 Antti Koivisto (koivisto@kde.org)
  *           (C) 2000 Dirk Mueller (mueller@kde.org)
- * Copyright (C) 2004, 2005, 2006, 2010 Apple Inc. All rights reserved.
+ * Copyright (C) 2004-2023 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -49,7 +49,7 @@ private:
     RenderPtr<RenderElement> createElementRenderer(RenderStyle&&, const RenderTreePosition&) final;
     const AtomString& formControlType() const final;
     bool computeWillValidate() const final { return false; }
-    void disabledAttributeChanged() final;
+    void parseAttribute(const QualifiedName&, const AtomString&) final;
     void disabledStateChanged() final;
     void childrenChanged(const ChildChange&) final;
     void didMoveToNewDocument(Document& oldDocument, Document& newDocument) final;
@@ -58,7 +58,6 @@ private:
     bool matchesInvalidPseudoClass() const final;
 
     WeakHashSet<HTMLElement, WeakPtrImplWithEventTargetData> m_invalidDescendants;
-    bool m_hasDisabledAttribute { false };
 };
 
 } // namespace
